// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Product Images should display component with custom image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="https://image.png"
  />
</div>
`;

exports[`Test Product Images should display component with the image product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
